# MSQ

./: .gitignore  CMakeLists.txt  Engine.cpp  Engine.hpp  Parameter.cpp  Playable.cpp  Playable.hpp  PlayablePipeline.cpp  PlayablePipeline.hpp  PlayableRack.cpp  PlayableRack.hpp  Sample.cpp  Sample.hpp  Sampler.cpp  Sampler.hpp  build.sh  mainUi.cpp
include/core/: Engine.hpp  Parameter.hpp  Playable.hpp  PlayablePipeline.hpp  PlayableRack.hpp  Renderable.hpp  Sample.hpp
include/playables/: Amp.hpp  GranularSynth.hpp  LoopingSampler.hpp  Sampler.hpp
src/core/: Engine.cpp  Parameter.cpp  Playable.cpp  PlayablePipeline.cpp  PlayableRack.cpp  Sample.cpp
src/playables/: Amp.cpp  LoopingSampler.cpp  Sampler.cpp
